updated log appenders

--- a/logstream/src/main/resources/application.properties
+++ b/logstream/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logs.folder.path=/var/log
+logs.folder.path=/logs
 log.filename=application.log, messages.log
 remote.server.name=localhost
 remote.server.port=8080
